Tensorflow: constants, variables, add, multiply, reduce_sum, reshape, gradient

--- a/02_Introduction_to_TensorFlow_in_Python/Introduction_to_TensorFlow.ipynb
+++ b/02_Introduction_to_TensorFlow_in_Python/Introduction_to_TensorFlow.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "(30000, 4)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -76,10 +76,472 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import constant from TensorFlow\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " A1:  <tf.Variable 'Variable:0' shape=(4,) dtype=int32, numpy=array([1, 2, 3, 4])>\n",
+      "\n",
+      " B1:  [1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the 1-dimensional variable A1\n",
+    "A1 = Variable([1, 2, 3, 4])\n",
+    "\n",
+    "# Print the variable A1\n",
+    "print('\\n A1: ', A1)\n",
+    "\n",
+    "# Convert A1 to a numpy array and assign it to B1\n",
+    "B1 = A1.numpy()\n",
+    "\n",
+    "# Print B1\n",
+    "print('\\n B1: ', B1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice work! Did you notice any differences between the print statements for `A1` and `B1`? In our next exercise, we'll review how to check the properties of a tensor after it is already defined.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `02: Performing element-wise multiplication`\n",
+    "Element-wise multiplication in TensorFlow is performed using two tensors with identical shapes. This is because the operation multiplies elements in corresponding positions in the two tensors. An example of an element-wise multiplication, denoted by the \n",
+    " symbol, is shown below:\n",
+    "\n",
+    "\n",
+    "![Alt Text](images/01.png)\n",
+    "\n",
+    " In this exercise, you will perform element-wise multiplication, paying careful attention to the shape of the tensors you multiply. Note that `multiply()`, `constant()`, and `ones_like()` have been imported for you.\n",
+    "\n",
+    "- Define the tensors `A1` and `A23` as constants.\n",
+    "- Set `B1` to be a tensor of ones with the same shape as `A1`.\n",
+    "- Set `B23` to be a tensor of ones with the same shape as `A23`.\n",
+    "- Set `C1` and `C23` equal to the element-wise products of `A1` and `B1`, and `A23` and `B23`, respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import ones_like, multiply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " C1: [1 2 3 4]\n",
+      "\n",
+      " C23: [[1 2 3]\n",
+      " [1 6 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define tensors A1 and A23 as constants\n",
+    "A1 = constant([1, 2, 3, 4])\n",
+    "A23 = constant([[1, 2, 3], [1, 6, 4]])\n",
+    "\n",
+    "# Define B1 and B23 to have the correct shape\n",
+    "B1 = ones_like(A1)\n",
+    "B23 = ones_like(A23)\n",
+    "\n",
+    "# Perform element-wise multiplication\n",
+    "C1 = multiply(A1, B1)\n",
+    "C23 = multiply(A23, B23)\n",
+    "\n",
+    "# Print the tensors C1 and C23\n",
+    "print('\\n C1: {}'.format(C1.numpy()))\n",
+    "print('\\n C23: {}'.format(C23.numpy()))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excellent work! Notice how performing element-wise multiplication with tensors of ones leaves the original tensors unchanged.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `03: Making predictions with matrix multiplication`\n",
+    "In later chapters, you will learn to train linear regression models. This process will yield a vector of parameters that can be multiplied by the input data to generate predictions. In this exercise, you will use input data, features, and a target vector, bill, which are taken from a credit card dataset we will use later in the course.\n",
+    "\n",
+    "![Alt Text](images/02.png)\n",
+    "\n",
+    "The matrix of input data, features, contains two columns: education level and age. The target vector, bill, is the size of the credit card borrower's bill.\n",
+    "\n",
+    "Since we have not trained the model, you will enter a guess for the values of the parameter vector, params. You will then use matmul() to perform matrix multiplication of features by params to generate predictions, billpred, which you will compare with bill. Note that we have imported matmul() and constant().\n",
+    "\n",
+    "\n",
+    "- Define `features`, `params`, and `bill` as constants.\n",
+    "- Compute the predicted value vector, `billpred`, by multiplying the input data, `features`, by the parameters, `params`. Use matrix multiplication, rather than the element-wise product.\n",
+    "- Define `error` as the targets, `bill`, minus the predicted values, `billpred`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import matmul"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1687]\n",
+      " [-3218]\n",
+      " [-1933]\n",
+      " [57850]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define features, params, and bill as constants\n",
+    "features = constant([[2, 24], [2, 26], [2, 57], [1, 37]])\n",
+    "params = constant([[1000], [150]])\n",
+    "bill = constant([[3913], [2682], [8617], [64400]])\n",
+    "\n",
+    "# Compute billpred using features and params\n",
+    "billpred = matmul(features, params)\n",
+    "\n",
+    "# Compute and print the error\n",
+    "error = bill - billpred\n",
+    "print(error.numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice job! Understanding matrix multiplication will make things simpler when we start making predictions with linear models."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `04: Summing over tensor dimensions`\n",
+    "You've been given a matrix, `wealth`. This contains the value of bond and stock wealth for five individuals in thousands of dollars.\n",
+    "\n",
+    "wealth = \n",
+    "\n",
+    "![Alt Text](images/03.png)\n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "The first column corresponds to bonds and the second corresponds to stocks. Each row gives the bond and stock wealth for a single individual. Use wealth, reduce_sum(), and .numpy() to determine which statements are correct about wealth."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The individual in the first row has the highest total wealth (i.e. stocks + bonds).\n",
+    "- Combined, the 5 individuals hold $50,000 in stocks.\n",
+    "- Combined, the 5 individuals hold $50,000 in bonds. ✅\n",
+    "- The individual in the second row has the lowest total wealth (i.e. stocks + bonds)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 2), dtype=int32, numpy=\n",
+       "array([[11, 50],\n",
+       "       [ 7,  2],\n",
+       "       [ 4, 60],\n",
+       "       [ 3,  0],\n",
+       "       [25, 10]])>"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow import reduce_sum\n",
+    "wealth = constant([[11,50],[7,2],[4,60],[3,0],[25,10]])\n",
+    "wealth\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 50 122]\n",
+      "[61  9 64  3 35]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reduce_sum(wealth,0).numpy())\n",
+    "print(reduce_sum(wealth,1).numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excellent work! Understanding how to sum over tensor dimensions will be helpful when preparing datasets and training models.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `05: Reshaping tensors`\n",
+    "Later in the course, you will classify images of sign language letters using a neural network. In some cases, the network will take 1-dimensional tensors as inputs, but your data will come in the form of images, which will either be either 2- or 3-dimensional tensors, depending on whether they are grayscale or color images.\n",
+    "\n",
+    "The figure below shows grayscale and color images of the sign language letter A. The two images have been imported for you and converted to the numpy arrays gray_tensor and color_tensor. Reshape these arrays into 1-dimensional vectors using the reshape operation, which has been imported for you from tensorflow. Note that the shape of gray_tensor is 28x28 and the shape of color_tensor is 28x28x3.\n",
+    "\n",
+    "![Alt Text](images/04.jpg)\n",
+    "\n",
+    "\n",
+    "- Reshape `gray_tensor` from a 28x28 matrix into a 784x1 vector named `gray_vector`.\n",
+    "- Reshape `color_tensor` from a 28x28x3 tensor into a 2352x1 vector named `color_vector`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gray_tensor_dims:  (28, 28)\n",
+      "color_tensor_dims:  (28, 28, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow import reshape\n",
+    "\n",
+    "gray_tensor = np.load(\"datasets/gray_tensor.npy\")\n",
+    "print(\"gray_tensor_dims: \",gray_tensor.shape)\n",
+    "\n",
+    "color_tensor = np.load(\"datasets/color_tensor.npy\")\n",
+    "print(\"color_tensor_dims: \", color_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape the grayscale image tensor into a vector\n",
+    "gray_vector = reshape(gray_tensor, (784, 1))\n",
+    "\n",
+    "# Reshape the color image tensor into a vector\n",
+    "color_vector = reshape(color_tensor, (2352,1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excellent work! Notice that there are 3 times as many elements in `color_vector` as there are in `gray_vector`, since `color_tensor` has 3 color channels.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `06: Optimizing with gradients`\n",
+    "You are given a loss function, \n",
+    ", which you want to minimize. You can do this by computing the slope using the GradientTape() operation at different values of x. If the slope is positive, you can decrease the loss by lowering x. If it is negative, you can decrease it by increasing x. This is how gradient descent works.\n",
+    "\n",
+    "![Alt Text](images/05.png)\n",
+    "\n",
+    "In practice, you will use a high level `tensorflow` operation to perform gradient descent automatically. In this exercise, however, you will compute the slope at `x` values of -1, 1, and 0. The following operations are available: `GradientTape()`, `multiply()`, and `Variable()`.\n",
+    "\n",
+    "- Define `x` as a variable with the initial value `x0`.\n",
+    "- Set the loss function, `y`, equal to `x` multiplied by `x`. Do not make use of operator overloading.\n",
+    "- Set the function to return the gradient of `y` with respect to `x`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import GradientTape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.0\n",
+      "2.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_gradient(x0):\n",
+    "  \t# Define x as a variable with an initial value of x0\n",
+    "\tx = Variable(x0)\n",
+    "\twith GradientTape() as tape:\n",
+    "\t\ttape.watch(x)\n",
+    "        # Define y using the multiply operation\n",
+    "\t\ty = multiply(x,x)\n",
+    "    # Return the gradient of y with respect to x\n",
+    "\treturn tape.gradient(y, x).numpy()\n",
+    "\n",
+    "# Compute and print gradients at x = -1, 1, and 0\n",
+    "print(compute_gradient(-1.0))\n",
+    "print(compute_gradient(1.0))\n",
+    "print(compute_gradient(0.0))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excellent work! Notice that the slope is positive at `x` = 1, which means that we can lower the loss by reducing `x`. The slope is negative at `x` = -1, which means that we can lower the loss by increasing x. The slope at `x` = 0 is 0, which means that we cannot lower the loss by either increasing or decreasing `x`. This is because the loss is minimized at `x` = 0.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `07: Working with image data`\n",
+    "You are given a black-and-white image of a letter, which has been encoded as a tensor, letter. You want to determine whether the letter is an X or a K. You don't have a trained neural network, but you do have a simple model, model, which can be used to classify letter.\n",
+    "\n",
+    "The 3x3 tensor, letter, and the 1x3 tensor, model, are available in the Python shell. You can determine whether letter is a K by multiplying letter by model, summing over the result, and then checking if it is equal to 1. As with more complicated models, such as neural networks, model is a collection of weights, arranged in a tensor.\n",
+    "\n",
+    "Note that the functions reshape(), matmul(), and reduce_sum() have been imported from tensorflow and are available for use.\n",
+    "\n",
+    "\n",
+    "- The model, `model`, is 1x3 tensor, but should be a 3x1. Reshape `model`.\n",
+    "- Perform a matrix multiplication of the 3x3 tensor, `letter`, by the 3x1 tensor, `model`.\n",
+    "- Sum over the resulting tensor, `output`, and assign this value to `prediction`.\n",
+    "- Print `prediction` using the `.numpy()` method to determine whether `letter` is K."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = np.array([[ 1.,  0., -1.]], dtype='float32') \n",
+    "letter = np.array([[1., 0., 1.], [1., 1., 0.], [1., 0., 1.]], dtype='float32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshape model from a 1x3 to a 3x1 tensor\n",
+    "model = reshape(model, (3, 1))\n",
+    "\n",
+    "# Multiply letter by model\n",
+    "output = matmul(letter, model)\n",
+    "\n",
+    "# Sum over output and print prediction using the numpy method\n",
+    "prediction = reduce_sum(output, 0)\n",
+    "print(prediction.numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excellent work! Your model found that `prediction`=1.0 and correctly classified the letter as a K. In the coming chapters, you will use data to train a `model`, model, and then combine this with matrix multiplication, `matmul(letter, model)`, as we have done here, to make predictions about the classes of objects.\n",
+    "\n",
+    "### `---- THE END ----`"
+   ]
   }
  ],
  "metadata": {
